core/observability-system/capacitor/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "capacitor"
  namespace: "observability-system"

spec:
  ingressClassName: "nginx"

  tls:
  - hosts:
    - "capacitor-observability-system-${replica}.${name}.${domain}"

  rules:
  - host: "capacitor-observability-system-${replica}.${name}.${domain}"
    http:
      paths:
      - path: "/"
        pathType: "ImplementationSpecific"
        backend:
          service:
            name: "capacitor"
            port:
              number: 9000
